--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,24 @@ adafruit-circuitpython-typing==1.11.0
 Adafruit-PlatformDetect==3.73.0
 Adafruit-PureIO==1.1.11
 binho-host-adapter==0.1.6
+contourpy==1.2.1
+cycler==0.12.1
+fonttools==4.53.1
+kiwisolver==1.4.5
+matplotlib==3.9.2
+numpy==2.0.1
+packaging==24.1
+pandas==2.2.2
+pillow==10.4.0
 pyftdi==0.55.4
+pyparsing==3.1.2
 pyserial==3.5
+python-dateutil==2.9.0.post0
+pytz==2024.1
 pyusb==1.2.1
 RPi.GPIO==0.7.1
 rpi_ws281x==5.0.0
+six==1.16.0
 sysv_ipc==1.1.0
 typing_extensions==4.12.2
+tzdata==2024.1
